# libopus

./: .clang-format  CMakeLists.txt  TODO  main.c  readme.md
docs/: common error met in CLion.md  configure CLion to use emscripten toolchain.md  fltk.md
docs/learning/: lup分解.docx
docs/other/: terria.md
docs/web/: c++ cmath.md  template.html
docs/web/lib/: jQuery.js
docs/web/lib/codemirror-5.64.0/: CHANGELOG.md  index.html
docs/web/lib/codemirror-5.64.0/addon/hint/: javascript-hint.js
docs/web/lib/codemirror-5.64.0/demo/: anywordhint.html  btree.html  buffers.html  changemode.html  closebrackets.html  complete.html  emacs.html  folding.html  fullscreen.html  html5complete.html  lint.html  marker.html  matchhighlighter.html  merge.html  multiplex.html  mustache.html  preview.html  requirejs.html  resize.html  runmode-standalone.html  runmode.html  search.html  simplemode.html  spanaffectswrapping_shim.html  sublime.html  tern.html  theme.html  variableheight.html  vim.html  visibletabs.html  widget.html  xmlcomplete.html
docs/web/lib/codemirror-5.64.0/doc/: internals.html  manual.html  realworld.html  releases.html  upgrade_v2.2.html  upgrade_v3.html  upgrade_v4.html
docs/web/lib/codemirror-5.64.0/lib/: codemirror.css  codemirror.js
docs/web/lib/codemirror-5.64.0/mode/: index.html
docs/web/lib/codemirror-5.64.0/mode/apl/: index.html
docs/web/lib/codemirror-5.64.0/mode/asterisk/: index.html
docs/web/lib/codemirror-5.64.0/mode/clike/: index.html  scala.html
docs/web/lib/codemirror-5.64.0/mode/clojure/: clojure.js
docs/web/lib/codemirror-5.64.0/mode/coffeescript/: index.html
docs/web/lib/codemirror-5.64.0/mode/css/: css.js  gss.html  index.html  less.html  scss.html
docs/web/lib/codemirror-5.64.0/mode/django/: index.html
docs/web/lib/codemirror-5.64.0/mode/dockerfile/: index.html
docs/web/lib/codemirror-5.64.0/mode/dylan/: index.html
docs/web/lib/codemirror-5.64.0/mode/elm/: index.html
docs/web/lib/codemirror-5.64.0/mode/factor/: index.html
docs/web/lib/codemirror-5.64.0/mode/fortran/: index.html
docs/web/lib/codemirror-5.64.0/mode/gfm/: gfm.js  index.html
docs/web/lib/codemirror-5.64.0/mode/haml/: index.html
docs/web/lib/codemirror-5.64.0/mode/handlebars/: index.html
docs/web/lib/codemirror-5.64.0/mode/haskell/: index.html
docs/web/lib/codemirror-5.64.0/mode/haskell-literate/: index.html
docs/web/lib/codemirror-5.64.0/mode/haxe/: index.html
docs/web/lib/codemirror-5.64.0/mode/htmlmixed/: index.html
docs/web/lib/codemirror-5.64.0/mode/javascript/: index.html  javascript.js  json-ld.html
docs/web/lib/codemirror-5.64.0/test/: index.html  test.js
examples/: agents_demo.c  autodiff_demo.c  avl_demo.c  brain_demo.c  delaunay_demo.c  gui_demo.c  heap_demo.c  hexembed.c  oop_demo.c  opus_physics_demo.c  pathfinding_demo.c  physics_engine_demo.c  polygon_demo.c  regexp_demo.c  template.c
sources/: CMakeLists.txt  config.h  opus.h
sources/_/: agents.c  agents.h
sources/brain/: ann.c  ann.h  lstm.c  lstm.h  neat.h
sources/data_structure/: array.c  array.h  avl.c  avl.h  avl_hash.c  avl_hash.h  hashmap.c  hashmap.h  heap.c  heap.h  matrix.c  matrix.h  tree_printer.c  tree_printer.h  trie.c  trie.h
sources/data_structure/deprecated/: avl.c  avl_hash.c  avl_hash.h
sources/engine/: engine.c  engine.h  gui.c  gui.h  input.c  input.h
sources/engine/plugins/: input_manager.c  vector_graphics.c
sources/game/: agents.c  agents.h
sources/math/: autodiff.c  autodiff.h  bresenham.c  bresenham.h  delaunay.c  delaunay.h  dubins_curve.c  dubins_curve.h  geometry.c  geometry.h  interpolate.c  interpolate.h  math.c  math.h  polynomial.c  polynomial.h  reeds_shepp_curve.c  reeds_shepp_curve.h
sources/math/curve/: dubins_curve.c  dubins_curve.h  reeds_shepp_curve.c  reeds_shepp_curve.h  spline.c  spline.h
sources/math/polygon/: delaunay.c  delaunay.h  polygon.h  tessellate.c  utils.c
sources/pathfinding/: graph.h  main.c  pathfinder.h
sources/pathfinding/finder/: a_star.c  d_star.c  flow_field.c  floyd_warshall.c
sources/pathfinding/finder/d_star_lite/: d_star_lite.c  map.c  map.h
sources/pathfinding/finder/d_star_lite/other/: test.py
sources/pathfinding/finder/d_star_lite/other/d_star_lite/: README.rst  gui.py
sources/pathfinding/finder/d_star_lite/other/robotics-d-star-lite-master/: README.md
sources/pathfinding/finder/d_star_lite/other/robotics-d-star-lite-master/src/: CMakeLists.txt  map.cpp  planner.cpp  planner.h
sources/pathfinding/graph/: adjacency_list.c  adjacency_multilist.c  forward_star.c  graph.c  grid.c  nav_mesh.c  orthogonal_list.c
sources/pathfinding/utils/: utils.h
sources/physics/: axes.c  body.c  collision.c  common.c  composite.c  constraint.c  detector.c  engine.c  pair.c  physics.h  sleeping.c  vertices.c
sources/physics/algorithm/: bvh.c  bvh.h  gjk.c  resolve.c  sat.c
sources/physics/opus/: factory.c  physics.h  physics_private.h  world.c
sources/physics/opus/collision/broad_phase/: BVH.c  SAP.c  grid.c
sources/physics/opus/collision/contact/: contacts.c  sleeping.c  v_clip.c
sources/physics/opus/collision/narrow_phase/: GJK.c  SAT.c
sources/physics/opus/dynamics/: body.c  constraint.c  joint.c
sources/physics/opus/geometry/: circle.c  polygon.c  shape.c
sources/physics/outdated/: matter.html  matter.js
sources/physics/outdated/verlet/: verlet.c  verlet.h
sources/render/: color.h  render.h  render_funcs.c  render_funcs.h  render_utils.c  render_utils.h
sources/render/glad/: glad.c  glad.h
sources/render/pluto/: CMakeLists.txt  plutovg.h
sources/render/pluto/example/: smiley.c
sources/render/pluto/source/: plutovg-dash.c  plutovg-font.c  plutovg-geometry.c  plutovg-rle.c
sources/utils/: event.c  event.h  slre.c  slre.h  utils.c  utils.h
sources/vg/: vg_color.c  vg_color.h  vg_engine.c  vg_engine.h  vg_gl.c  vg_gl.h  vg_gui.c  vg_gui.h  vg_input.c  vg_input.h  vg_utils.c  vg_utils.h
sources/vg/pluto/: plutovg-private.h
sources/vg/pluto/source/: CMakeLists.txt  plutovg-blend.c  plutovg-paint.c  plutovg.c
(+37 files in other folders)
